--- a/esl_getopts.tex
+++ b/esl_getopts.tex
@@ -31,48 +31,61 @@ passed into a \ccode{ESL\_GETOPTS} object, which is used to determine
 and store the configuration state of your application according to the
 command line, environment variables, and configuration files.
 
-\subsection{The getopts API}
+Table~\ref{tbl:getopts_api} lists the functions in the
+\eslmod{getopts} API. The module implements a \ccode{ESL\_GETOPTS}
+object that holds the configuration state of the application, and an
+\ccode{ESL\_OPTIONS} structure that contains information about one
+configurable option. An application defines an array of
+\ccode{ESL\_OPTIONS} to declare what options it will allow.
 
-The module implements a \ccode{ESL\_GETOPTS} object that holds the
-configuration state of the application, and an \ccode{ESL\_OPTIONS}
-structure that contains information about one configurable option.  An
-application defines an array of \ccode{ESL\_OPTIONS} to declare what
-options it will allow.
-
-The API defines the following functions:
-
+\begin{table}[ht]
 \begin{tabular}{ll}
-       \multicolumn{2}{c}{\textbf{creating/destroying a configuration}}\\
+       \multicolumn{2}{c}{\textbf{the \ccode{ESL\_GETOPTS} object}}\\
 \ccode{esl\_getopts\_Create()}    & Creates a new \ccode{ESL\_GETOPTS} object. \\
 \ccode{esl\_getopts\_Destroy()}   & Destroys a created \ccode{ESL\_GETOPTS} object. \\
 \ccode{esl\_getopts\_Dump()}      & Dumps a configuration to an output stream. \\
-       \multicolumn{2}{c}{\textbf{setting a configuration}}\\
+       \multicolumn{2}{c}{\textbf{setting and testing a configuration}}\\
 \ccode{esl\_opt\_ProcessConfigFile()}  & Parses options out of a configuration file.\\
 \ccode{esl\_opt\_ProcessEnvironment()} & Parses options out of environment variables.\\
 \ccode{esl\_opt\_ProcessCmdline()}     & Parses options from the command line.\\
-       \multicolumn{2}{c}{\textbf{final verification of a configuration}}\\
 \ccode{esl\_opt\_VerifyConfig()}       & Tests required and incompatible opts.\\
-       \multicolumn{2}{c}{\textbf{retrieving option settings}}\\
+       \multicolumn{2}{c}{\textbf{retrieving option settings and arguments}}\\
 \ccode{esl\_opt\_GetBooleanOption()}   & Retrieve the state of a TRUE/FALSE option setting.\\
 \ccode{esl\_opt\_GetIntegerOption()}   & Retrieve an integer option argument.\\
 \ccode{esl\_opt\_GetFloatOption()}     & Retrieve a float option argument.\\
 \ccode{esl\_opt\_GetDoubleOption()}    & Retrieve a double option argument.\\
 \ccode{esl\_opt\_GetCharOption()}      & Retrieve a single-character option argument.\\
 \ccode{esl\_opt\_GetStringOption()}    & Retrieve an option argument as a string.\\
-       \multicolumn{2}{c}{\textbf{retrieving command line arguments}}\\
 \ccode{esl\_opt\_ArgNumber()}          & Retrieve number of cmdline args.\\
 \ccode{esl\_opt\_GetCmdlineArg()}      & Retrieve the next command line argument.\\
+       \multicolumn{2}{c}{\textbf{formatting option documentation}}\\
+\ccode{esl\_opt\_DisplayHelp()}        & Formats one-line help for each option.\\
 \end{tabular}
+\caption{The \eslmod{getopts} API.}
+\label{tbl:getopts_api}
+\end{table}
+
+
 
 \subsection{An example of using the getopts API}
 
-The steps in using the getopts API are:
+Figure~\ref{fig:getopts_example} shows an example of using five short
+options (including help) and two long options, without using any of
+getopts' optional validation or configuration mechanisms. The steps
+are:
+
+\begin{figure}
+\input{cexcerpts/getopts_example}
+\caption{An example of using the getopts module.}
+\label{fig:getopts_example}
+\end{figure}
 
 \begin{itemize}
 \item The application defines an array of \ccode{ESL\_OPTIONS}
-      structures, one per option. Name, type, and default fields are
-      required; the other fields are optional.  The array is
-      terminated by an entry of all 0's.
+      structures, one per option. Name, type, and default value fields
+      are required. The other fields are optional (though the help
+      string shouldn't be left NULL unless you're being lazy). The
+      array is terminated by an entry of all 0's.
 
 \item The application defines a helpful ``usage'' string. If the getopts
       module encounters any problem with the configuration, it prints
@@ -84,29 +97,23 @@ The steps in using the getopts API are:
 
 \item The application now processes option settings from the command
       line, environment variables, and one or more configuration
-      files. 
+      files. The application can do this in any precedence order it
+      chooses.
  
 \item The application recovers option settings one by one, and stores
-      them however and wherever it wants. 
+      them wherever it wants. 
 
 \item Command line arguments are then recovered, in order.
 
-\item Once the application has recovered all of its options and
-      arguments, it may free the \ccode{ESL\_GETOPTS} object. This 
-      object is the only place where memory is allocated; any string
+\item The application goes off and does its thing.
+
+\item On exit, the \ccode{ESL\_GETOPTS} object is free'd. This 
+      object is the only place where memory is allocated. Any string
       retrieved as an option or argument, for example, is a pointer
-      to internal memory maintained by the object.
+      to internal memory maintained by the object. This makes it
+      dangerous to free the object until you know you're not accessing
+      any pointers it's returned to you, unless you've made copies.
 \end{itemize}
-
-For example, the code below sets up four short options and two long
-options, without using any of getopts' optional validation or
-configuration mechanisms:
-
-\begin{figure}
-\input{cexcerpts/getopts_example1}
-\caption{An example of using the getopts module.}
-\label{fig:getopts_example1}
-\end{figure}
 
 An example of running this program:
 \begin{cchunk}
@@ -125,10 +132,15 @@ this example, it is always on whether we use the \ccode{-b} option or
 not.
 
 
+
+
+
 \subsection{Defining options in the \ccode{ESL\_OPTIONS} array}
 
-The \ccode{ESL\_OPTIONS} structure is declared in \ccode{getopts.h}
-as:
+Since you define your options in a static array of
+\ccode{ESL\_OPTIONS} structures, you need to know what an
+\ccode{ESL\_OPTIONS} structure contains.  The \ccode{ESL\_OPTIONS}
+structure is declared in \ccode{getopts.h} as:
 
 \input{cexcerpts/options_object}
 
@@ -170,46 +182,58 @@ Since the \ccode{ESL\_GETOPTS} object stores all values internally as
 strings, default settings in the options array are also all provided
 as strings.
 
-Boolean defaults should be provided as \ccode{FALSE} or
-\ccode{\"TRUE\"}.  The syntax here is a little weird; the quotes
-around TRUE and the absence of quotes around FALSE are
-important. Internally, booleans are off if they're NULL, and on if
-they're non-NULL. Therefore default values of \ccode{FALSE},
-\ccode{NULL}, or \ccode{0} are all interpreted as ``off'', and any
-non-NULL string such as \ccode{"TRUE"}, \ccode{"on"}, or even
-\ccode{""} is interpreted as ``on''.
+For boolean defaults, \ccode{NULL}, \ccode{FALSE}, or 0 are
+interpreted as \ccode{FALSE}, and any non-NULL string is interpreted
+as \ccode{TRUE}.  For a boolean option that is \ccode{TRUE} by
+default, the only place where the string value matters is in
+formatting option help, where this string will be displayed as the
+default setting. Therefore, strings like \ccode{"default"},
+\ccode{"on"}, or \ccode{"true"} would be typical. Note that the syntax
+here is a little weird. The quotes around \ccode{"TRUE"} and the
+absence of quotes around \ccode{FALSE} are important. \ccode{FALSE},
+\ccode{NULL}, and \ccode{0} are all identical (null pointers) in the
+internal representation.
 
-Integer, real-valued, and character arguments are provided as strings:
-``42'' not 42, ``1.0'' not 1.0, and ``x'' not 'x'. 
+Integer, real-valued, and character arguments must be provided as
+strings: ``42'' not 42, ``1.0'' not 1.0, and ``x'' not 'x'. 
 
 String arguments can be set to any string, or NULL. 
 
-Unlike boolean options which can be ``on'' or ``off'', or string
-options that can be set to a string or NULL, there is no way to set an
-integer, real, or char argument off. These options must always have a
-valid value. This prevents one from using the same option to turn on a
-behavior and configure a parameter. For instance, say you wanted to
-have \ccode{hmmbuild --evolveic 1.0} mean ``turn on the evolveic mode,
-and set its free parameter to 1.0''. The getopts module encourages you
-to separate this into two options, a boolean to activate the mode, and
-a real to configure the free parameter; perhaps \ccode{hmmbuild
---evolveic --infotarget 1.0}.
+To set a character argument off by default, use an empty string
+(\ccode{""}), not \ccode{NULL}. The first character in this string is
+\ccode{\\0}, so when you retrieve the character value,
+\ccode{esl\_opt\_GetCharOption()} will return \ccode{\\0}. Your
+application can interpret that as ``off''.
 
-Still, you can work around this. For a character argument, you can set
-the default to the empty string \verb+""+, which will be interpreted
-as a NUL character \verb+\0+, i.e.\ 0; your code can interpret value 0
-as unset. For a integer or real-valued argument, you can declare the
+So, while boolean options can be ``off'', string options can be NULL,
+and character options can be the empty string, there is no way to set
+an integer or real-valued argument off. Numeric option arguments must
+always have a valid value. This prevents you from using the same
+option to turn on a behavior and to configure a parameter. For
+instance, say you wanted to have \ccode{hmmbuild --evolveic 1.0} mean
+``turn on the evolveic mode, and set its free parameter to 1.0''. The
+getopts module encourages you to separate this into two options -- a
+boolean to activate the mode, and a real to configure the free
+parameter, such as \ccode{hmmbuild --evolveic --infotarget 1.0}.
+
+If you really hate this behavior, here's a workaround.  Declare the
 argument as an untyped \ccode{eslARG\_STRING} with a default value of
-NULL, then have your code interpret NULL as ``off''.  You lose type
-and range checking when you do this, of course, and you have to
-convert the string to the appropriate type yourself.
+NULL. Retrieve the argument value as a string with
+\ccode{esl\_opt\_GetStringOption()}; have your application interpret
+\ccode{NULL} as ``unset'', and convert non-\ccode{NULL} strings to the
+appropiate numeric type yourself.  You lose automatic type and range
+checking when you do this, of course.
    
 There is no way to turn a boolean option off by a command line option,
 environment variable, or configuration file. Booleans (and strings,
 for that matter) can only be turned on when their option is
 selected. Booleans can be set to off by default, or toggled off
 indirectly by another option is turned on (see the section on toggle
-groups further below).
+groups further below). Thus the workaround is to provide a
+counteroption (to turn \ccode{-b} off, provide an option
+\ccode{--no-b}), and toggle-tie them together.
+
+
 
    \subsubsection{Connecting an option to an environment variable}
 
@@ -230,6 +254,8 @@ argument, for instance (in a C-shell),
   % setenv FOO_DEBUG_LEVEL 5
 \end{cchunk}
 
+
+
    \subsubsection{Range checking}
 
 If a non-NULL range is provided, a configured argument (including the
@@ -248,6 +274,8 @@ range strings specifying both lower and upper bounds are
 \ccode{"0<n<=100"}, \ccode{"0<=x<=1"}, and \ccode{"a<=c<=z"}.
 
 Range checking occurs before any option is set.
+
+
 
    \subsubsection{Setting toggle groups of options}
 
@@ -281,6 +309,8 @@ not be turned off.
 Toggling behavior occurs immediately, whenever an option with a
 non-NULL \ccode{toggle\_opts} field is set.
 
+
+
    \subsubsection{Specifying required or incompatible options}
 
 If a non-NULL string \ccode{required\_opts} is provided for option X,
@@ -306,6 +336,8 @@ The \ccode{incompat\_opts} field is the converse of
 \ccode{required\_opts}.It specifies a comma-delimited list of options
 that may \emph{not} also be on if option X is on.
 
+
+
    \subsubsection{Example of a more fully featured \ccode{ESL\_OPTIONS} array}
 
 The test driver in \ccode{getopts.c} uses an options array that
@@ -314,7 +346,104 @@ exercises all the optional features at least once:
 \input{cexcerpts/getopts_bigarray}
 
 
-\subsection{Command line parsing and beyond: config files and the environment}
+\subsection{Formatting help}
+
+
+The \ccode{esl\_opt\_DisplayHelp()} function is intended to streamline
+the job of printing a brief help message, reminding the user of the
+command line options. It uses the help string to produce output like
+(from the example code above):
+
+\begin{cchunk}
+% ./example -h
+Usage: ./example [-options] <arg>
+
+  where options are:
+  -h         : show help and usage
+  -a         : a boolean switch
+  -b         : another boolean switch  [default]
+  -n <n>     : an integer argument  [0]
+  -x <x>     : a real-valued argument  [1.0]
+  --file <s> : long option, with filename arg
+  --char <c> : long option, with character arg
+\end{cchunk}
+
+One line is printed for each option, in the same order that they
+appear in the \ccode{ESL\_OPTIONS} array. The line is constructed from
+the mandatory option name, the mandatory argument type, and the
+optional help string.
+
+If there is room on the lines, default values are shown in brackets
+(when they are on or non-\ccode{NULL}). This display is all or none;
+if any line is too long, no default values are displayed.
+
+If there is still room on the lines, range restrictions are shown in
+parentheses. Like the default values, this display is also all or
+none.
+
+The amount of space on the line (in characters) is specified by the
+\ccode{textwidth} argument to \ccode{esl\_opt\_DisplayHelp()}, which
+might typically be 80. If any line is too long even without printing a
+default value and range restriction, an error is thrown; you need to
+either shorten the help string or increase the specified
+\ccode{textwidth}. (This is not a memory allocation
+issue. \ccode{textwidth} is provided as a tool to help you keep all
+your text within the bounds of a user's terminal window, and warn you
+when you're going to wrap or truncate lines.)
+
+You can indent all the lines by some number of spaces using the
+\ccode{indent} argument, which was set to 2 in the example above.
+
+
+The base behavior of \ccode{esl\_opt\_DisplayHelp()} is to show all
+the options in one list. You might want to have separate lists. For
+example, you might want to consider some options as ``expert''
+options, and only show help for those when a user really asks for it.
+Or you might simply want to group your options into sections, with
+different headers. This is what the \ccode{docgrouptag} field is for
+in the \ccode{ESL\_OPTIONS} structure. If you pass
+\ccode{esl\_opt\_DisplayHelp()} a nonzero value for \ccode{docgroup},
+it will only show help lines for options that have a matching
+\ccode{docgrouptag}. If you had some options with a
+\ccode{docgrouptag} of 1, and some more options with a 
+\ccode{docgrouptag} of 2, you could format them into two help sections
+with this:
+
+\begin{cchunk}
+ if (show_help) {
+    puts(usage); 
+    puts("\n  where some options are:");
+    esl_opt_DisplayHelp(stdout, go, 1, 2, 80); /* 1=docgroup 1; 2=indentation; 80=width */
+    puts("\n  and some more options are:");
+    esl_opt_DisplayHelp(stdout, go, 2, 2, 80); /* 1=docgroup 2; 2=indentation; 80=width */
+    return 0;
+  }
+\end{cchunk}
+
+which, if you modified the above example in this way (setting the
+first three options to have a \ccode{docgrouptag} of 1 and the other
+four to be 2) would give you:
+
+\begin{cchunk}
+./example -h
+Usage: ./example [-options] <arg>
+
+  where some options are:
+  -h : show help and usage
+  -a : a boolean switch
+  -b : another boolean switch  [default]
+
+  and some more options are:
+  -n <n>     : an integer argument  [0]
+  -x <x>     : a real-valued argument  [1.0]
+  --file <s> : long option, with filename arg
+  --char <c> : long option, with character arg
+\end{cchunk}
+
+
+
+
+\subsection{Command line parsing, config files, and the environment}
 
 Once a \ccode{ESL\_GETOPTS} object has been loaded with an options
 array and initialized to default state by
@@ -366,8 +495,8 @@ for a specific application, with modifications as appropriate.)
 
    \subsubsection{Command line option syntax}
 
-Command line option syntax is standard, essentially identical to the
-syntax used by GNU programs.
+Command line syntax is essentially identical to the syntax used by GNU
+programs. Options must precede the mandatory arguments.
 
 Options are either short or long. Short options are a single character
 preceded by a single \ccode{-}; for example, \ccode{-a}. Long options
@@ -402,7 +531,7 @@ the command line.)
 Long option names should contain only alphanumeric characters,
 \ccode{-}, or \ccode{\_}. They may not contain \ccode{=} or \ccode{,}
 characters, which would confuse the option argument parsers. Other
-characters should work but are not recommended.
+characters may work but are not recommended.
 
 Multi-word arguments may be quoted: for example, \ccode{--hostname "my
 host"} or \ccode{-s "my string"}. However, only the space-separated
@@ -426,8 +555,6 @@ be separated from options by whitespace. For example:
    -b             # Turn -b on.
    -W arg         # Set -W to "arg"
 \end{cchunk}
-
-
 
 
 
