Starting to include SSI.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@96 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -84,7 +84,7 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 
 
 \newpage
-\section{The getopts (opt) module: command line option parsing and more}
+\section{getopts (opt): command line parsing}
 \input{../esl_getopts}
 \subsection{Functions in the getopts module}
 \input{autotext/esl_getopts_functions}
@@ -132,7 +132,7 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \input{autotext/esl_stack_functions}
 
 \newpage
-\section{stopwatch: internal timing of processes}
+\section{stopwatch: timing parts of programs}
 \input{../esl_stopwatch}
 \subsection{Functions in the stopwatch module}
 \input{autotext/esl_stopwatch_functions}
