Working on ssi, still in progress. Use of large file support in ssi necessitated reorg of autoconf strategy. esl_config.h.in is new. esl_config.h is included *first* in all .c files, to get proper LFS #define's in front of any other #include's. (This is why every .c file was just changed.)
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@98 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -1,8 +1,10 @@
 \vspace*{\fill}
 
 \noindent 
-Copyright (C) 2004-2005 HHMI/Washington University School of
-Medicine.\\
+Copyright (C) 2004-2006 Sean R. Eddy\\
+Copyright (C) 2004-2006 Washington University School of Medicine.\\
+Copyright (C) 2006 Howard Hughes Medical Institute Janelia Farm.\\
+
 
 \vspace{1.5em}
 \noindent 
