ssi rough draft done; still to be compiled & debugged, needs a test driver, and docs need proofed.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@102 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/intro.tex
+++ b/documentation/intro.tex
@@ -29,7 +29,7 @@ module.
 
 
 
-
+\begin{description}
 
 \item[\textbf{Documentation.}]  Effort has been invested in practical
 documentation, including this Guide, tutorial examples to Easel APIs,
