--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -126,6 +126,12 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \input{autotext/esl_sqio_functions}
 
 \newpage
+\section{ssi: indexing database flatfiles for fast record retrieval}
+\input{../esl_ssi}
+\subsection{Functions in the ssi module}
+\input{autotext/esl_ssi_functions}
+
+\newpage
 \section{The stack module: pushdown stacks for integers, chars, and pointers}
 \input{../esl_stack}
 \subsection{Functions in the stack module}
