added esl_sq_CreateFrom(); started testsuite.sqc, which compiles/runs 17 module test drivers.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@105 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -120,9 +120,9 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \input{autotext/esl_regexp_functions}
 
 \newpage
-\section{The sqio module: i/o of unaligned sequence files}
+\section{sqio: i/o of unaligned sequence files}
 \input{../esl_sqio}
-\subsection{Functions in the sqio (sio) module}
+\subsection{Functions in the sqio module}
 \input{autotext/esl_sqio_functions}
 
 \newpage
