--- a/esl_ssi.tex
+++ b/esl_ssi.tex
@@ -91,7 +91,7 @@ set of functions for portable binary file i/o.
 \end{table}
 
 
-\subsection{An example of creating an SSI index}
+\subsection{Example: creating an SSI index}
 
 Figure~\ref{fig:ssi_example} shows a program that creates an SSI index
 for a FASTA sequence file, in which sequence records start with a line
