--- a/esl_sqio.tex
+++ b/esl_sqio.tex
@@ -1,42 +1,62 @@
 
-The sqio module contains routines for input from unaligned sequence
-data files, such as FASTA files.
+The \eslmod{sqio} module contains routines for input from unaligned
+sequence data files, such as FASTA files.
 
-\subsection{The sqio API}
+Several different common sequence file formats are understood, and can
+be automatically recognized.
 
-The sqio module implements two objects. A \ccode{ESL\_SQFILE} object
-works much like an ANSI C \ccode{FILE}: it maintains information for
-an open sequence file while it's being read. The \ccode{ESL\_SQ}
-object contains information for a single sequence.
+Sequences can be read sequentially from multiple sequence alignment
+files, as if the MSA file was an unaligned sequence file, when the
+module is augmented with the \eslmod{msa} module.
 
-The API consists of the following functions:
+Sequences can be read from normal files, directly from the
+\ccode{stdin} pipe, or from \ccode{gzip}-compressed files.
 
-\vspace{1em}
+Sequence files can be automatically looked for in a list of one or
+more database directories, specified by an environment variable (such
+as \ccode{BLASTDB}).
+
+Table~\ref{tbl:sqio_api} lists the functions in the \eslmod{sqio} API.
+The module uses two objects. A \ccode{ESL\_SQFILE} object works much
+like an ANSI C \ccode{FILE}: it maintains information for an open
+sequence file while it's being read. The \ccode{ESL\_SQ} object
+contains information for a single sequence.
+
+\begin{table}[b]
 \begin{center}
 \begin{tabular}{ll}\hline
-    \multicolumn{2}{c}{\textbf{open/close of a sequence file}}\\
+    \multicolumn{2}{c}{\textbf{\ccode{ESL\_SQ} sequence object}}\\
+\ccode{esl\_sq\_Create()}    & Creates empty \ccode{ESL\_SQ} object. \\
+\ccode{esl\_sq\_CreateFrom()}& Creates \ccode{ESL\_SQ} object from elemental string data. \\
+\ccode{esl\_sq\_Reuse()}     & Resets an \ccode{ESL\_SQ} object for reuse. \\
+\ccode{esl\_sq\_Squeeze()}   & Optimizes an \ccode{ESL\_SQ}, destroys i/o buffers. \\
+\ccode{esl\_sq\_Destroy()}   & Destroys a created \ccode{ESL\_SQ}.\\
+    \multicolumn{2}{c}{\textbf{\ccode{ESL\_SQFILE} sequence file object}}\\
 \ccode{esl\_sqfile\_Open()}  & Opens a sequence file for reading.\\
 \ccode{esl\_sqfile\_Close()} & Closes an open sequence file.\\
-    \multicolumn{2}{c}{\textbf{sequence i/o}}\\
-\ccode{esl\_sq\_Read()}      & Reads a sequence from an open file.\\
-    \multicolumn{2}{c}{\textbf{sequence object maintenance}}\\
-\ccode{esl\_sq\_Create()}   & Creates a new \ccode{ESL\_SQ} object. \\
-\ccode{esl\_sq\_Reuse()}    & Resets an \ccode{ESL\_SQ} object for reuse. \\
-\ccode{esl\_sq\_Squeeze()}  & Optimizes an \ccode{ESL\_SQ}, destroys i/o buffers. \\
-\ccode{esl\_sq\_Destroy()}  & Destroys a created \ccode{ESL\_SQ}.\\
-    \multicolumn{2}{c}{\textbf{using file format codes}}\\
-\ccode{esl\_sqfile\_FormatCode()} & Converts format string to internal code\\
-\ccode{esl\_sqfile\_FormatString()} & Converts format code to string\\
-\ccode{esl\_sqfile\_IsAlignment()} & Checks if a code is alignment file fmt\\\hline
+    \multicolumn{2}{c}{\textbf{Sequence i/o}}\\
+\ccode{esl\_sqio\_Read()}         & Reads a sequence from an open file.\\
+\ccode{esl\_sqio\_Write()}        & Writes a sequence to an open stream.\\
+\ccode{esl\_sqio\_WhatFormat()}   & Autodetects format of an open (rewindable) stream.\\
+\ccode{esl\_sqio\_FormatCode()}   & Converts format string to internal code\\
+\ccode{esl\_sqio\_FormatString()} & Converts format code to string\\
+\ccode{esl\_sqio\_IsAlignment()}  & Checks if a code is alignment file fmt\\\hline
 \end{tabular}
 \end{center}
+\caption{The \eslmod{sqio} API.}
+\label{tbl:sqio_api}
+\end{table}
 
-\subsection{Example of using the sqio API}
+\subsection{Example: reading sequences from a file}
 
-An example that opens a file, reads sequences from it one at a time,
-then closes the file:
+Figure~\ref{fig:sqio_example} shows a program that opens a file, reads
+sequences from it one at a time, then closes the file.
 
+\begin{figure}
 \input{cexcerpts/sqio_example}
+\caption{Example of reading sequences from a file.}
+\label{fig:sqio_example}
+\end{figure}
 
 A FASTA file named \ccode{seqfile} is opened for reading by calling
 \ccode{esl\_sqfile\_Open(filename, format, env, \&sqfp)}, which
@@ -95,12 +115,18 @@ Finally, to clean up properly, a \ccode{ESL\_SQ} that was created is
 destroyed with \ccode{esl\_sq\_Destroy(sq)}, and a \ccode{ESL\_SQFILE}
 is closed with \ccode{esl\_sqfile\_Close()}.
 
-\subsection{Accessing information in the ESL\_SQ object}
+\subsection{Getting data into and out of the ESL\_SQ object}
 
-The information in an \ccode{ESL\_SQ} object is meant to be accessed
-directly, so you need to know what it contains. The object is defined
-and documented in \ccode{esl\_sqio.h}. It contains various information;
-the stuff you need to know is:
+The \ccode{esl\_sq\_CreateFrom()} function is for creating a new
+\ccode{ESL\_SQ} object from simple character strings for a sequence
+and its name (also, optionally, an accession, description, and/or
+secondary structure annotation string). This is to make it easier to
+interface other code with Easel.
+
+To get simple character strings back out of an \ccode{ESL\_SQ} object,
+you can peek inside the object. The object is defined and documented
+in \ccode{esl\_sqio.h}. It contains various information; the stuff you
+need to know is:
 
 \input{cexcerpts/sqio_sq}
 
@@ -122,16 +148,24 @@ If the sequence has been digitized (see alphabet augmentation), the
 \ccode{1..n} digital sequence is in \ccode{dsq}; else \ccode{dsq} is
 \ccode{NULL}.
 
+You can copy any of these strings, but don't alter them unless you
+know what you're doing. Their memory is managed by the \ccode{ESL\_SQ}
+object.
+
 \subsection{Accepted formats}
 
 Accepted unaligned sequence file formats (and their Easel format
 codes) are:
 
 \begin{tabular}{ll}
-\ccode{eslSQFILE\_FASTA} & FASTA format \\
+\ccode{eslSQFILE\_DDBJ}     & DDBJ flat text DNA database format \\
+\ccode{eslSQFILE\_EMBL}     & EMBL flat text DNA database format \\
+\ccode{eslSQFILE\_FASTA}    & FASTA format \\
+\ccode{eslSQFILE\_GENBANK}  & Genbank flat text DNA database format \\
+\ccode{eslSQFILE\_UNIPROT}  & Uniprot flat text protein database format \\
 \end{tabular}
 
-Additionally, the code \ccode{eslSQFILE\_UNKNOWN} is recognized; it
+Additionally, the code \ccode{eslSQFILE\_UNKNOWN} is recognized. It
 tells \ccode{esl\_sqfile\_Open()} to perform format autodetection.
 
 \subsection{Special input streams: stdin and compressed files}
