vectorops: D2F(), etc added. random: test driver written, and added to test suite. still working on ssi test driver.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@110 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -38,8 +38,10 @@
 \newpage
 \chapter{Core modules}
 
-\section{The easel (esl) module: error handling and other fundamentals}
+\section{\eslmod{easel}: error handling and other fundamentals}
 \input{../easel}
+\subsection{Functions in the easel module}
+\input{autotext/easel_functions}
 
 \vspace*{\fill}
 \begin{quote}
@@ -52,9 +54,9 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \end{quote}     
 
 \newpage
-\section{The alphabet (abc) module: digitized biosequences}
+\section{\eslmod{esl\_alphabet}: digitized biosequences}
 \input{../esl_alphabet}
-\subsection{Functions in the alphabet (abc) module}
+\subsection{Functions in the alphabet module}
 \input{autotext/esl_alphabet_functions}
 
 
@@ -66,7 +68,7 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 
 
 \newpage
-\section{The dirichlet module: Beta, Gamma, Dirichlet densities and priors}
+\section{\eslmod{esl\_dirichlet}: Beta, Gamma, Dirichlet densities and priors}
 \input{../esl_dirichlet}
 \subsection{Functions in the dirichlet module}
 \input{autotext/esl_dirichlet_functions}
@@ -76,7 +78,7 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 
 
 \newpage
-\section{The fileparser module: token-based data file input}
+\section{\eslmod{esl\_fileparser}: token-based data file input}
 \input{../esl_fileparser}
 \subsection{Functions in the fileparser module}
 \input{autotext/esl_fileparser_functions}
@@ -84,25 +86,25 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 
 
 \newpage
-\section{getopts (opt): command line parsing}
+\section{\eslmod{esl\_getopts}: command line parsing}
 \input{../esl_getopts}
 \subsection{Functions in the getopts module}
 \input{autotext/esl_getopts_functions}
 
 \newpage
-\section{The keyhash (key) module: keyword hashing, associative array emulation}
+\section{\eslmod{esl\_keyhash}: keyword hashing, associative array emulation}
 \input{../esl_keyhash}
 \subsection{Functions in the keyhash module}
 \input{autotext/esl_keyhash_functions}
 
 \newpage
-\section{The msa module: multiple sequence alignment i/o}
+\section{\eslmod{esl\_msa}: multiple sequence alignment i/o}
 \input{../esl_msa}
 \subsection{Functions in the msa module}
 \input{autotext/esl_msa_functions}
 
 \newpage
-\section{The random (rnd) module: pseudorandom numbers and basic sampling}
+\section{\eslmod{esl\_random}: pseudorandom numbers and basic sampling}
 \input{../esl_random}
 \subsection{Functions in the random (rnd) module}
 \input{autotext/esl_random_functions}
@@ -114,43 +116,43 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \end{quote}     
 
 \newpage
-\section{The regexp module: regular expression matching}
+\section{\eslmod{esl\_regexp}: regular expression matching}
 \input{../esl_regexp}
 \subsection{Functions in the regexp module}
 \input{autotext/esl_regexp_functions}
 
 \newpage
-\section{sqio: i/o of unaligned sequence files}
+\section{\eslmod{esl\_sqio}: i/o of unaligned sequence files}
 \input{../esl_sqio}
 \subsection{Functions in the sqio module}
 \input{autotext/esl_sqio_functions}
 
 \newpage
-\section{ssi: indexing database flatfiles for fast record retrieval}
+\section{\eslmod{esl\_ssi}: indexing database flatfiles for fast record retrieval}
 \input{../esl_ssi}
 \subsection{Functions in the ssi module}
 \input{autotext/esl_ssi_functions}
 
 \newpage
-\section{The stack module: pushdown stacks for integers, chars, and pointers}
+\section{\eslmod{esl\_stack}: pushdown stacks for integers, chars, and pointers}
 \input{../esl_stack}
 \subsection{Functions in the stack module}
 \input{autotext/esl_stack_functions}
 
 \newpage
-\section{stopwatch: timing parts of programs}
+\section{\eslmod{esl\_stopwatch}: timing parts of programs}
 \input{../esl_stopwatch}
 \subsection{Functions in the stopwatch module}
 \input{autotext/esl_stopwatch_functions}
 
 \newpage
-\section{The vectorops module: simple vector operations}
+\section{\eslmod{esl\_vectorops}: simple vector operations}
 \input{../esl_vectorops}
 \subsection{Functions in the vectorops module}
 \input{autotext/esl_vectorops_functions}
 
 \newpage
-\section{The wuss module: RNA secondary structure annotation}
+\section{\eslmod{esl\_wuss}: RNA secondary structure annotation}
 \input{../esl_wuss}
 \subsection{Functions in the wuss module}
 \input{autotext/esl_wuss_functions}
