--- a/esl_ssi.tex
+++ b/esl_ssi.tex
@@ -126,7 +126,7 @@ like:
 \item The \ccode{esl\_fgets()} function (part of the \eslmod{easel} 
       foundation module) is a way of reading text files line by line, 
       no matter how long each line might be: \ccode{esl\_fgets()}
-      reallocates its buffer <buf> as needed.
+      reallocates its buffer as needed.
 
 \item The \ccode{esl\_FileNewSuffix()} function is also part of the
       \eslmod{easel} foundation; here, it makes it easy to create a
