--- a/esl_stopwatch.tex
+++ b/esl_stopwatch.tex
@@ -20,7 +20,7 @@ human-interpretable time in seconds; and it provides a standard output
 function for formatting times, similar to the output of the standard
 UNIX \ccode{time} command line utility for timing processes.
 
-\begin{table}
+\begin{table}[hb]
 \begin{tabular}{ll}\hline
 \ccode{esl\_stopwatch\_Create()}  & Creates new stopwatch.\\
 \ccode{esl\_stopwatch\_Destroy()} & Frees a stopwatch.\\
