--- a/esl_sqio.tex
+++ b/esl_sqio.tex
@@ -22,7 +22,7 @@ like an ANSI C \ccode{FILE}: it maintains information for an open
 sequence file while it's being read. The \ccode{ESL\_SQ} object
 contains information for a single sequence.
 
-\begin{table}[b]
+\begin{table}[bhp]
 \begin{center}
 \begin{tabular}{ll}\hline
     \multicolumn{2}{c}{\textbf{\ccode{ESL\_SQ} sequence object}}\\
@@ -38,9 +38,11 @@ contains information for a single sequence.
 \ccode{esl\_sqio\_Read()}         & Reads a sequence from an open file.\\
 \ccode{esl\_sqio\_Write()}        & Writes a sequence to an open stream.\\
 \ccode{esl\_sqio\_WhatFormat()}   & Autodetects format of an open (rewindable) stream.\\
-\ccode{esl\_sqio\_FormatCode()}   & Converts format string to internal code\\
-\ccode{esl\_sqio\_FormatString()} & Converts format code to string\\
-\ccode{esl\_sqio\_IsAlignment()}  & Checks if a code is alignment file fmt\\\hline
+\ccode{esl\_sqio\_FormatCode()}   & Converts format string to internal code.\\
+\ccode{esl\_sqio\_FormatString()} & Converts format code to string.\\
+\ccode{esl\_sqio\_IsAlignment()}  & Checks if a code is alignment file fmt.\\
+\ccode{esl\_sqio\_Position()}     & Use offset to move to a specific sequence.\\
+\ccode{esl\_sqio\_Rewind()}       & Rewind sequence file to beginning.\\\hline
 \end{tabular}
 \end{center}
 \caption{The \eslmod{sqio} API.}
