--- a/esl_vectorops.tex
+++ b/esl_vectorops.tex
@@ -1,6 +1,6 @@
 
-The vectorops (vec) module contains small but useful operations on
-vectors. 
+The \eslmod{vectorops} module contains routines for simple operations
+on vectors.
 
 Different functions allow an operation to be performed in vectors
 containing elements of different scalar types (double, float,
@@ -8,8 +8,11 @@ integer). The appropriate routine is prefixed with D, F, or I. For
 example, \ccode{esl\_vec\_DSet()} is the Set routine for a vector of
 doubles; \ccode{esl\_vec\_ISet()} is for integers.
 
-\subsection{The vectorops API}
+Table~\ref{tbl:vectorops_api} lists the functions in the
+\eslmod{vectorops} API.
 
+\begin{table}[bp]
+\begin{center}
 \begin{tabular}{ll}
    \multicolumn{2}{c}{\textbf{All vectors}}\\
 \ccode{esl\_vec\_\{D,F,I\}Set()}         & Set all items in vector to scalar value.\\
@@ -36,5 +39,8 @@ doubles; \ccode{esl\_vec\_ISet()} is for integers.
 \ccode{esl\_vec\_\{D,F\}LogSum()}        & Given vector of log p's; return log of summed p's.\\
 \ccode{esl\_vec\_\{D,F\}LogNorm()}       & Normalize a log p vector, making it a prob vector. \\
 \end{tabular}
-
+\end{center}
+\caption{The \eslmod{vectorops} API.}
+\label{tbl:vectorops_api}
+\end{table}
 
