Alphabet module brought up to date - will start using it in HMMER3.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@112 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/copyright.tex
+++ b/documentation/copyright.tex
@@ -1,18 +1,21 @@
 \vspace*{\fill}
-
-\noindent 
+\begin{flushleft}
 Copyright (C) 2004-2006 Sean R. Eddy\\
 Copyright (C) 2004-2006 Washington University School of Medicine.\\
-Copyright (C) 2006 Howard Hughes Medical Institute Janelia Farm.\\
-
+Copyright (C) 2006 Howard Hughes Medical Institute, Janelia Farm Research Campus.\\
 
 \vspace{1.5em}
-\noindent 
-The Easel library, including both the software and its documentation,
-is licensed and freely distributed under the Creative Commons
-Attribution License.  To view a copy of this license, visit
-\url{http://creativecommons.org/licenses/by/2.0/} or send a letter to
-Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
-USA.
+Permission is granted to make and distribute verbatim copies of this
+documentation provided the copyright notice and this permission notice
+are retained on all copies.
+
+\vspace{1.5em}
+The Easel software library is licensed and freely distributed under
+the GNU General Public License (GPL).  For a copy of the full text of
+the GPL, see
+\htmladdnormallink{www.gnu.org/licenses}{http://www.gnu.org/licenses/}.
+
+\vspace{1.5em}
+\end{flushleft}
 
 
