More functions moving into alphabet module from HMMER's trace.c
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@115 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_alphabet.tex
+++ b/esl_alphabet.tex
@@ -41,10 +41,13 @@ $L+2$, where \ccode{dsq[1..L]} are digitized residues, and
    \multicolumn{2}{c}{\textbf{other functions}}\\
 \ccode{esl\_abc\_{I,F,D}AvgScore()}    & Calculate avg score of degenerate residue.\\
 \ccode{esl\_abc\_{I,F,D}ExpectScore()} & Calculate expected score of degenerate residue.\\
+\ccode{esl\_abc\_Type()}               & Convert internal alphabet type code to output string.\\
+\ccode{esl\_abc\_{F,D}Count()}         & Count a digital symbol towards a countvector.\\
 \ccode{esl\_abc\_DigitizeSymbol()}     & Returns digital code for one ASCII symbol.\\
+\ccode{esl\_abc\_IsDegenerate()}       & Returns TRUE given code for a degeneracy.\\
 \ccode{esl\_abc\_IsBasic()}            & Returns TRUE given code for a fundamental residue.\\
 \ccode{esl\_abc\_IsGap()}              & Returns TRUE given code for a gap.\\
-\ccode{esl\_abc\_IsDegenerate()}       & Returns TRUE given code for a degeneracy.\\
+
 \hline
 \end{tabular}
 \end{center}
