dmatrix module updated. test driver and example driver added. autodoc_functions now has -t option to dump draft API table;   adds hyperlinks and hypertargets for function APIs;   and it tolerates {} in function documentation, so math   formatting is much easier now.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@116 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/documentation/macros.tex
+++ b/documentation/macros.tex
@@ -3,6 +3,7 @@
 \newcommand{\emcode}[1]{{\small\bfseries\texttt{#1}}}
 \newcommand{\prog}[1]{\small\texttt{#1}}
 \newcommand{\eslmod}[1]{{\small\bfseries\texttt{#1}}}
+\newcommand{\eslfunc}[1]{\hyperlink{man:#1}{{\small\texttt{#1}}}}
 
 % Eliminate the ones below someday. 
 \newcommand{\cmacro}[1]{\texttt{#1}}
