--- a/documentation/main.tex
+++ b/documentation/main.tex
@@ -60,30 +60,23 @@ error?} \hspace{3em} -- Franz Kafka, \emph{The Castle}
 \input{autotext/esl_alphabet_functions}
 
 
-%\newpage
-%\section{The dmatrix (dmx) module: linear algebra for 2D double matrices}
-%\subsection{Functions in the dmatrix (dmx) module}
-%\input{autotext/dmatrix_functions}
-
-
-
 \newpage
 \section{\eslmod{esl\_dirichlet}: Beta, Gamma, Dirichlet densities and priors}
 \input{../esl_dirichlet}
 \subsection{Functions in the dirichlet module}
 \input{autotext/esl_dirichlet_functions}
 
-
-
-
+\newpage
+\section{\eslmod{esl\_dmatrix}: linear algebra for 2D double matrices}
+\input{../esl_dmatrix}
+\subsection{Functions in the dmatrix module}
+\input{autotext/dmatrix_functions}
 
 \newpage
 \section{\eslmod{esl\_fileparser}: token-based data file input}
 \input{../esl_fileparser}
 \subsection{Functions in the fileparser module}
 \input{autotext/esl_fileparser_functions}
-
-
 
 \newpage
 \section{\eslmod{esl\_getopts}: command line parsing}
