esl_distance module started. Reworking error handling - again. Documentation updated. Decided to base on C99 standard... which lets me use variadic macros for ESL_ERROR and ESL_FAIL, for one thing.
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@118 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_alphabet.tex
+++ b/esl_alphabet.tex
@@ -43,10 +43,13 @@ $L+2$, where \ccode{dsq[1..L]} are digitized residues, and
 \ccode{esl\_abc\_{I,F,D}ExpectScore()} & Calculate expected score of degenerate residue.\\
 \ccode{esl\_abc\_Type()}               & Convert internal alphabet type code to output string.\\
 \ccode{esl\_abc\_{F,D}Count()}         & Count a digital symbol towards a countvector.\\
-\ccode{esl\_abc\_DigitizeSymbol()}     & Returns digital code for one ASCII symbol.\\
-\ccode{esl\_abc\_IsDegenerate()}       & Returns TRUE given code for a degeneracy.\\
-\ccode{esl\_abc\_IsBasic()}            & Returns TRUE given code for a fundamental residue.\\
-\ccode{esl\_abc\_IsGap()}              & Returns TRUE given code for a gap.\\
+\ccode{esl\_abc\_DigitizeSymbol()}     & Returns digital code for one ASCII character.\\
+\ccode{esl\_abc\_XIsDegenerate()}      & Returns TRUE given code for a degeneracy.\\
+\ccode{esl\_abc\_XIsBasic()}           & Returns TRUE given code for a fundamental residue.\\
+\ccode{esl\_abc\_XIsGap()}             & Returns TRUE given code for a gap.\\
+\ccode{esl\_abc\_CIsDegenerate()}      & Returns TRUE given a degenerate character.\\
+\ccode{esl\_abc\_CIsBasic()}           & Returns TRUE given a fundamental residue.\\
+\ccode{esl\_abc\_CIsGap()}             & Returns TRUE given a gap character.\\
 
 \hline
 \end{tabular}
